fix CSS gradient on iOS

--- a/featured-items.scss
+++ b/featured-items.scss
@@ -56,8 +56,8 @@ html {
             content: '';
             display: block;
             width: 20%;
-            // background: rgb(0, 0, 0);
-            background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(255, 240, 252, 1) 100%);
+            background: rgba(255, 255, 255, 0);
+            background: linear-gradient(90deg, rgba(255, 255, 255, 0) 0%, rgba(255, 240, 252, 1) 100%);
         }
 
         .nav-link {
